--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <style type="text/css">
-            body { margin: 0; font-size: 2em; background-color: white; }
-            h1 { text-align: center; color: red; }
-            h1 + h1 { color: green; }
-            h1:last-child { color: blue; }
-            #quit { background-color: gray; color: white; font-weight: bold; display: block; text-align: right; }
-        </style>
-        <script type="text/javascript">
-            var counter = 0;
-            function toggleElement()
-            {
-                var elements = document.getElementsByTagName('h1');
-                for (var i = 0; i < elements.length; ++i)
-                    elements[i].style.display = (counter % elements.length) == i ? '' : 'none';
-                counter++;
-                setTimeout('toggleElement()', 1000);
-            }
-            window.onload = function()
-            {
-                document.getElementById("quit").onmousedown = function()
-                {
-                    Qt.quit();
-                };
-                toggleElement();
-            }
-        </script>
+        <link rel="stylesheet" type="text/css" href="test.css">
     </head>
     <body>
-        <a id="quit">X</a>
-        <h1>Hello</h1>
-        <h1>HTML5</h1>
-        <h1>World</h1>
+        <h1>Combustible Lemonade</h1>
+        <p>My firsts paragraph.</p>
+
+        <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/116126081&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
+        <p>My second paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
+        <p>another paragraph.</p>
     </body>
 </html>
