--- a/index.html
+++ b/index.html
@@ -1,50 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="test.css">
+         <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">    
     </head>
-    <body>
+    <header class="header">
         <h1>Combustible Lemonade</h1>
-        <p>My firsts paragraph.</p>
-
-        <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/116126081&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
-        <p>My second paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
-        <p>another paragraph.</p>
+        <p class="navigation">
+            <a href="music.html">music</a> &nbsp;
+            <a href="programming.html">programming</a>
+        </p>
+    </header>
+    <body>
+        <div class="text">
+            <p>Hello, and welcome to my website! My name is Jan, except on the internet, where I go under the pseudonym of Combustible Lemonade. I like making progressive music using LMMS, and I also like videogames (specifically Kerbal Space Program), and I often like to (try to) make games myself. </p>
+            <p>Here's some music:</p>
+             <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/116126081&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
+        </div>
     </body>
 </html>
