--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <title>Home</title>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/index.css">
         <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">
     </head>
 
-    <header></header>
-        
     <body>
+        <header></header>
         <script type="text/javascript">
             if (!window.jQuery){
                 document.write("<p>jQuery could not be loaded. *ded* <p>");
