--- a/programming.html
+++ b/programming.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <title>Programming</title>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">
     </head>
-    <header></header>
     <body>
+        <header></header>
         <script type="text/javascript">
             if (!window.jQuery){
                 document.write("<p>jQuery could not be loaded. *ded* <p>");
