--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <h1>Combustible Lemonade</h1>
 <p class="navigation">
     <a href="index.html" class="one">Home</a> &nbsp;
-    <a href="music.html" class="one">music</a> &nbsp;
-    <a href="programming.html" class="one">programming</a>
+    <a href="music.html" class="one">Music</a> &nbsp;
+    <a href="programming.html" class="one">Programming</a>
 </p>
