--- a/programming.html
+++ b/programming.html
@@ -3,6 +3,7 @@
         <title>Programming</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">
+        <link rel="stylesheet" type="text/css" href="StyleSheets/programmin.css">
     </head>
     <body>
         <header></header>
@@ -12,5 +13,8 @@
             }
             $("header").load("header.html");
         </script>
+        <div class="text">
+            <p>This is where I'll showcase most of my programming projects. You can view my programming projects (and even this site) on my <a href="https://github.com/CombustibleLemonade">github page</a>. </p> </div>
+        
     </body>
 </html>
