--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </script>
 
         <div class="text">
-            <p>Hello, and welcome to my website! My name is Jan, except on the internet, where I go under the pseudonym of Combustible Lemonade. I like making progressive music using LMMS, and I also like videogames (specifically Kerbal Space Program), and I often like to (try to) make games myself. </p>
+            <p>Hello, and welcome to my website! My name is Jan, except on the internet, where I go under the pseudonym of Combustible Lemonade. I like making progressive music using LMMS, and I also like videogames (specifically Kerbal Space Program), and I often (try to) make games myself.</p>
             <p>Here's some music:</p>
              <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/116126081&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
         </div>
