--- a/music.html
+++ b/music.html
@@ -13,8 +13,10 @@
             }
             $("header").load("header.html");
         </script>
-        <div class="text">On this page you'll find most of the music I've made over the years. For music making I like to use <a href="http://lmms.sourceforge.net/home.php">Linux Multi Media Studio</a>, which is a multiplatform opensource DAW. Most of my songs are available on my
-        <a href="https://soundcloud.com/combustible-lemonade">soundcloud page</a>.
+        <div class="text">
+            <p>On this page you'll find most of the music I've made over the years. For music making I like to use <a href="http://lmms.sourceforge.net/home.php">Linux Multi Media Studio</a>, which is a multiplatform opensource DAW. Most of my songs are available on my <a href="https://soundcloud.com/combustible-lemonade">soundcloud page</a>.</p>
+            <p>Here are most of the songs I've written, chronologically ordered:</p>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/142715053&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
         </div>
     </body>
 </html>
