--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
         <title>404</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/main.css">
+        <link rel="stylesheet" type="text/css" href="StyleSheets/404.css">
     </head>
     <body>
         <header></header>
@@ -13,8 +14,8 @@
             $("header").load("header.html");
         </script>
         <div class="text">
-            <p>Whoops!</p>
-            <p>Unfourtinately the page you tried to access doesn't exist... But, just for comfort, here's some super secret music:</p>
+            <h2>Whoops!</h2>
+            <p>Unfourtinately, the page you tried to access doesn't exist... But, just for comfort, here's some super secret music:</p>
             <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/162702053%3Fsecret_token%3Ds-Ads6G&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
         </div>
     </body>
