preparations for auto-updater

--- a/header.html
+++ b/header.html
@@ -4,10 +4,8 @@
     <script src="http://www.bitstorm.org/jquery/color-animation/jquery.animate-colors.js"></script>
 
 </head>
-<h1>Combustible Lemonade</h1>
+<h1>Squared</h1>
 
 <p class="navigation">
     <a href="index.html" class="one" id="Home">Home</a> &nbsp;
-    <a href="music.html" class="one" id="Music">Music</a> &nbsp;
-    <a href="programming.html" class="one" id="Programming">Programming</a>
 </p>
