--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Home</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://cdn.rawgit.com/skipser/youtube-autoresize/master/youtube-autoresizer.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/index.css">
     </head>
     <body>
         <header></header>
+        
         <script type="text/javascript">
             if (!window.jQuery){
                 document.write("<p>jQuery could not be loaded. *ded*<p>");
@@ -15,7 +17,9 @@
         </script>
 
         <div class="text">
-            <p>Squared is a videogame about moving blocks. Try it out now! Squared can be downloaded from <a href="http://combustible-lemonade.itch.io/squared">itch</a>.  </p>
+            <p>Squared is a videogame about moving blocks. Try it out now! Squared can be downloaded from <a href="http://combustible-lemonade.itch.io/squared">itch</a>. </p>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/Y7X0v-ffbbc?rel=0" frameborder="0" allowfullscreen></iframe>
+            <p>The source code for squared can be downloaded from the <a href="https://github.com/CombustibleLemonade/Squared">github repository</a>. </p>
         </div>
     </body>
 </html>
