--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </script>
 
         <div class="text">
-            <p>Squared is a videogame about moving blocks. Try it out now! Squared can be downloaded from <a href="http://combustible-lemonade.itch.io/squared">itch</a>. </p>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/Y7X0v-ffbbc?rel=0" frameborder="0" allowfullscreen></iframe>
+            <p>Squared is a videogame about moving blocks. If you want to try this game out, you can download it for free from <a href="http://combustible-lemonade.itch.io/squared">itch.io</a>. Alternatively, if you are in a generous mood, you could even pay any amount of money! It's your choice! </p>
+            <iframe width="1920" height="1080" src="https://www.youtube.com/embed/Y7X0v-ffbbc?autoplay=1&rel=0" frameborder="0" allowfullscreen></iframe>
             <p>The source code for squared can be downloaded from the <a href="https://github.com/CombustibleLemonade/Squared">github repository</a>. </p>
         </div>
     </body>
